chat visibility and z-index fixes

--- a/src/client/room/style.css
+++ b/src/client/room/style.css
@@ -1,41 +1,59 @@
-#video_container {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
-
 html, body, div#root{
     margin: 0;
     width: 100%;
     height: 100%;
     background-color: #131313;
     color: rgba(255, 255, 255, 0.8);
-    text-shadow: 0 0 3px black;
 }
 
-
-
 * {
-    text-shadow: 0 0 3px black;
+    /* text-shadow: 0 0 3px black; */
     transition: opacity 0.5s ease-in-out;
 }
 
+/**
+* OVERLAYS
+*/
+
 #enter_room {
-    position: relative;
+    position: fixed;
     height: 100%;
     width: 100%;
-    z-index: 200;
+    z-index: 5;
     background-color: black;
 }
+
+#dissapearing_content_container {
+    position: fixed;
+    z-index: 3;
+    opacity: 1;
+}
+
+.hidden {
+    opacity: 0 !important;
+    z-index: 0 !important;
+}
+
+#toggle_hide_overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: transparent;
+}
+
+#always_visible_content {
+    position: fixed;
+    z-index: 2;
+}
+
+/**
+* VIDEO ELEMENTS
+*/
 
 .remote_video {
     max-height: 100%;
     max-width: 100%;
-    /*flex-basis: 0;*/
-    /* flex-shrink: 1;
-    flex-grow: 1; */
-    /* border: 1px dashed whitesmoke; */
 }
 
 #local_video {
@@ -43,41 +61,38 @@ html, body, div#root{
     right: 0;
     top: 0;
     width: 25%;
-    z-index: 5;
 }
 
+#video_container {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+/**
+* BUTTONS
+*/
 #button_container {
-    z-index: 100;
     position: fixed;
-    bottom: 0;
+    bottom: 40px;
     left: 0;
     width: 100%;
     height: 9%;
     min-height: 1em;
-    /* transform: translate(-50%); */
     display: flex;
 }
 
 button {
-    /* border-radius: 50px; */
     border: 1px solid rgba(255, 255, 255, 0.8);;
     height: 100%;
     background-color: transparent;
     color: rgba(255, 255, 255, 0.8);;
     cursor: pointer;
     flex: 1;
-    z-index: 50;
     box-shadow: 0 0 1px black;
 }
 
-#toggle_log {
-    height: 2em;
-    width: 3em;
-    position: fixed;
-    top: 0;
-    left: 0;
-    border: 1px solid rgba(255, 255, 255, 0.8);
-}
 
 #disconnect {
     background-color: rgba(255, 0, 0, 0.7);
@@ -107,6 +122,10 @@ button {
     background-color: rgba(0, 255, 0, 0.7);
 }
 
+/**
+* LOGGING
+*/
+
 #log {
     display: none;
     position: fixed;
@@ -117,7 +136,15 @@ button {
     overflow-y: auto;
     margin: 0;
     padding: 0;
-    z-index: 10;
+}
+
+#toggle_log {
+    height: 2em;
+    width: 3em;
+    position: fixed;
+    top: 0;
+    left: 40%;
+    border: 1px solid rgba(255, 255, 255, 0.8);
 }
 
 .logEntry {
@@ -129,111 +156,89 @@ button {
 
 #connection_status {
     position: fixed;
-    top: 0.4em;
-    left: 3.5em;
-    border-radius: 50px;
-    width: 1em;
-    height: 1em;
-    /* font-weight: 900; */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
 }
+
+/**
+* CHAT
+*/
 
 #chat {
     position: fixed;
-    top: 3em;
+    top: 0;
     left: 0;
-}
-
-#chat_input {
-    width: 14em;
-    height: 2em;
-    color: white;
-    background-color: black;
-    display: none;
-}
-
-#chat_button {
-    height: 2em;
-    display: none;
-}
-
-#chat_toggle {
-    height: 2em;
-}
-
-#hide_chat {
-    margin-top: 1em;
-    height: 2em;
-    display: none;
+    width: 40%;
+    max-height: calc(100% - 10em);
+    color:rgb(255, 242, 0);
+    display: flex;
+    flex-direction: column;
+    z-index: 2; /*higher than toggle_hide_overlay*/
 }
 
 #chat_screen {
-    position: fixed;
-    left: 0;
-    top: 8em;
-    /* border: 1px solid white; */
-    width: 40%;
     overflow-y: auto;
     background-color: transparent;
-    max-height: calc(90% - 7em);
-    /* max-height: 8em; */
-    color:rgba(255, 255, 255, 0.8);
+    height: 100%;
 }
 
 .chat_message {
     padding-left: 0.5em;
     padding-right: 0.5em;
     word-wrap: break-word;
-    /* background-color: rgba(0, 0, 0, 0.5); */
-    width: fit-content;
     max-width: calc(100% + 1em); /*plus left right padding*/
 }
 
-#disconnect_options {
-    display: none;
+#chat_input_container {
     position: fixed;
-    top: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-#disconnect_options_wrapper {
+    height: 40px; /*must match offset in button_container*/
     display: flex;
-    flex-direction: column;
 }
 
-.disconnect_option {
-    height: 4em;
-    font-size: 20px;
-    margin: 1em 0 1em 0;
+#chat_input {
+    flex: 1;
+    background-color: black;
+    color: rgba(255, 255, 255, 0.8);
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
-#destroy_timer {
-    width: 3em;
-    height: 100%;
-    flex: initial;
+#chat_button {
+    flex: 0 0 40px; /*same as container heigth*/
 }
 
-#timer_alert {
-    display: none;
-    position: fixed;
-    top: 0.4em;
-    left: 33%;
+#hide_chat {
+    margin-top: 1em;
+    padding: 10px;
+    width: fit-content;
+    color:rgb(255, 242, 0);
+    border-color: rgb(255, 242, 0);
+    border-radius: 5px;
+}
+
+.strokedText {
+    -webkit-text-stroke-width: 0.8px;
+    -webkit-text-stroke-color: black;
+    /* font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif; */
+    font: 700 18px Arial, Helvetica, sans-serif;
 }
 
 /*hide arrows on numeric inputs*/
 
-    /* Chrome, Safari, Edge, Opera */
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-    }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
-    /* Firefox */
-    input[type=number] {
+/* Firefox */
+input[type=number] {
     -moz-appearance: textfield;
 }
